# Tale-Strories

./: .dockerignore  .gitignore  TaleStories.uproject  build_mac_server.sh  docker-compose.yml  up_mac_server.sh
Api/proto/: game.proto
Backend/: Dockerfile  build.gradle  docker-compose.yml  gradle.properties  settings.gradle
Backend/adapters/: build.gradle.kts
Backend/adapters/grpc/: build.gradle.kts
Backend/adapters/grpc/src/main/proto/: game.proto
Backend/session-service/: build.gradle
Backend/session-service/src/main/kotlin/: GameEventListener.kt  SessionApplication.kt
Backend/session-service/src/main/resources/: application.yml
Backend/test-client/: build.gradle
Backend/test-client/src/main/kotlin/: TestClient.kt
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
Content/: NewBlueprint.uasset
Content/Maps/: MAP_2D.umap
Content/PaperAssets/LegacyFantasyForest/: License.txt
Content/PaperAssets/LegacyFantasyForest/Character/: Character.uasset
Content/PaperAssets/LegacyFantasyForest/Environment/: T_BackgroundTrees.uasset  T_BackgroundTrees_TileSet.uasset  T_ForegroundTrees.uasset  T_ForegroundTrees_TileSet.uasset  T_Sky.uasset  T_SkyPadded.uasset  T_Sky_TileSet.uasset  T_TilesMain.uasset  T_TilesMainPadded.uasset  T_TilesMain_TileMap.uasset  T_TilesMain_TileSet.uasset
DedicatedServer/: CMakeLists.txt  Dockerfile  vcpkg.json
DedicatedServer/src/: main.cpp
Source/: TaleStories.Target.cs  TaleStoriesEditor.Target.cs
Source/TaleStories/: TaleStories.Build.cs  TaleStories.cpp  TaleStories.h  TaleStoriesBPLibrary.cpp  TaleStoriesBPLibrary.h  TaleStoriesGameMode.cpp  TaleStoriesGameMode.h  game.proto
Source/ThirdPartyLibUE/: ThirdPartyLibUE.Build.cs  ThirdPartyLibUE.cpp
